--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,16 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "beautifulsoup4>=4.13.4",
+    "click>=8.2.1",
+    "fastapi>=0.115.12",
     "pywinauto>=0.6.9",
     "requests>=2.32.3",
+    "sse-starlette[uvicorn]>=2.3.6",
+    "uvicorn>=0.34.3",
 ]
+
+[project.scripts]
+vex-tm-bridge = "vex_tm_bridge.web:main"
 
 [project.optional-dependencies]
 dev = [
